# Powder

./: .gitignore  TEST_SUMMARY.md  a.out  bench_markov_scaling.py  benchmark.py  compute_faults.md  config.yaml  event_logs_3g0b.txt  pareto_confidence.csv  pyproject.toml  quorum-oracle.cpp  readme.md  requirements.txt  rsm_combinations.csv  run_combinations.py  run_pareto_confidence.py  small_comb.csv
docs/: compute_faults.md  hetero_markov_modeling.md  markov_state_analysis.md  memory_faults.md  quorum_systems.md  raft_markov_state_analysis.md
notebooks/: availability-sanity-checks.py  availability-vs-failure-timeout.py  markov-calculator.ipynb  markov-liveness.ipynb  markov_simplified_bathtub_analysis.csv  markov_simplified_bathtub_analysis.py  monte-carlo-simulator.ipynb  pbft_raft_safe_live_probabilities.ipynb  raft_markov_quality_benchmark.json  raft_markov_quality_benchmark.py
powder/: __init__.py  graphing_utils.py  markov.py  markov_solver.py  markov_utils.py  monte_carlo.py  results.py  rsm_model_utils.py  scenario.py  wolfram_utils.py
tests/: test_availability.py  test_closed_form_verification.py  test_event_timing.py  test_markov.py  test_markov_hetero_monotonicity.py  test_markov_hetero_reduces_to_homogeneous.py  test_markov_hetero_state_conservation.py  test_markov_hetero_state_counts.py  test_markov_hetero_vs_mc.py  test_markov_state_conservation.py  test_markov_utils.py  test_markov_vs_mc.py  test_metrics_counters.py  test_monte_carlo_statistics.py  test_pricing.py  test_quality_levels.py  test_raft_leader_election.py  test_rate_signature.py  (+5 more)
(+20 files in other folders)
